Frontend: fix author picture being too big

--- a/frontend/src/books/books.css
+++ b/frontend/src/books/books.css
@@ -29,7 +29,8 @@
 
 #filterInfo img {
   margin: 0 30px 0 0;
-  min-width: 300px;
+  min-width: 250px;
+  max-width: 250px;
   align-self: center;
 }
 
